# analysisbranchingdecisions

./: CMakeLists.txt  Makefile
binaries/: CMakeLists.txt
check/: check.sh  check_cluster.sh  configuration_logfiles.sh  evalcheck_cluster.sh  run.sh
check/instances/: flugpl.mps
check/parser/: LogFileParser.py
check/results/: p0033.out  p0201.out
check/testset/: easy.test  easy_presolved.test  numerical.test  numerical_presolved.test  presolved.test  short.test
make/: make.project
make/local/: make.targets
settings/: feas.set  feas_s1.set  feas_s2.set  noprop.set  noprop_s1.set  noprop_s2.set  s1.set  s2.set
src/: exact.cpp
src/exact/: CMakeConfig.hpp.in  Config.hpp  ExactSolver.hpp
src/exact/core/: PropagationView.hpp  SingleRow.hpp
src/exact/data/: Bound.hpp  ConstraintMatrix.cpp  ConstraintMatrix.hpp  ExactOptions.hpp  MatrixBuffer.hpp  Objective.hpp  Problem.hpp  ProblemBuilder.hpp  RowFlags.hpp  SingleRow.hpp  Solution.hpp  SparseStorage.cpp  SparseStorage.hpp  Statistics.hpp  Tree.hpp  VariableDomains.cpp  VariableDomains.hpp
src/exact/interfaces/: EventCatcher.hpp  Leaf.hpp  ScaleInformation.hpp  ScipInterface.hpp  SoplexInterface.hpp  ViprInterface.hpp
src/exact/io/: BoundType.hpp  Message.hpp  MpsParser.hpp  MpsWriter.hpp  ParseKey.hpp  SolParser.hpp  SolWriter.hpp
src/exact/misc/: Alloc.hpp  Array.hpp  Flags.hpp  Hash.hpp  MultiPrecision.hpp  Num.hpp  NumericalStatistics.hpp  OptionsParser.hpp  ParameterSet.hpp  StableSum.hpp  String.hpp  Timer.hpp  Vec.hpp  VectorUtils.hpp  VersionLogger.hpp  Wrappers.hpp  compress_vector.hpp  (+2 more)
